Fixed iFrame collapse

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -181,7 +181,7 @@ body {
   display: grid;
   justify-items: center;
   place-content: start;
-  max-height: 500px;
+  position: relative;
 }
 @media (max-width: 750px) {
   .content {
@@ -214,7 +214,7 @@ body {
   line-height: 2rem;
 }
 .content .link_container a {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   line-height: 1.2;
   cursor: pointer;
   color: blue;
@@ -226,11 +226,12 @@ body {
 .content.fullscreen .link_container {
   display: none;
 }
-.content .lottie,
-.content iframe {
-  display: flex;
+
+.canvaOpdracht iframe {
+  position: relative;
+  display: inline-flex;
   width: 100%;
-  height: 100%;
+  aspect-ratio: 6/5;
   flex-direction: column;
 }
 
@@ -264,6 +265,9 @@ body {
   place-items: center;
   gap: 1rem;
   text-align: center;
+}
+.fullscreen .extra_content p {
+  max-width: clamp(60%, 800px, 60vw);
 }
 .fullscreen .extra_content .keyword_list {
   display: flex;
